fixes for using event links on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,24 @@
 
-
 /**********General***************************************************/
+
+.buttonlink {
+  background: none!important;
+  border: none;
+  padding: 0!important;
+  /*optional*/
+  font-family: arial, sans-serif;
+  /*input has OS specific font-family*/
+  color: #0d6efd
+  text-decoration: underline;
+  cursor: pointer;
+
+}
 
 .boxdateheader {
 	font-style: italic;
     font-weight: normal;
     font-size: small
 }
-
 
 .dropdown-item {
   color: rgba(0, 0, 0, .55)/* Example: dark gray */
